--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 .proset-game {
+    position: absolute;
+    width: 30%;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.proset-rows {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,15 +17,22 @@
 .proset-row {
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 15px;
 }
 
 .proset-card {
     border-radius: 10px;
     border: 2px solid black;
+    background-color: white;
     height: 150px;
     width: 100px;
     position: relative;
+    
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .proset-dot {
@@ -24,27 +40,5 @@
     border: 1px solid;
     height: 25px;
     width: 25px;
-    position: absolute;
-}
-
-.proset-dot.top {
-    top: 8%;
-}
-
-.proset-dot.middle {
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-.proset-dot.bottom {
-    bottom: 8%;
-}
-
-.proset-dot.left {
-    left: 10%;
-}
-
-.proset-dot.right {
-    right: 10%;
+    margin: 10px;
 }
