--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,28 @@
     background-color: white;
     height: 150px;
     width: 100px;
-    position: relative;
-    
+
+    transition: all .2s ease-in-out;
+}
+
+.proset-card:hover {
+    transform: scale(1.1);
+}
+
+.proset-card.selected {
+    background-color: black;
+    border: 2px solid gray;
+}
+
+.proset-dots {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
+
+    width: 100%;
+    height: 100%;
+    margin: auto;
 }
 
 .proset-dot {
@@ -41,4 +57,12 @@
     height: 25px;
     width: 25px;
     margin: 10px;
+}
+.proset-card.selected .proset-dots .proset-dot {
+    border: 1px solid gray;
+}
+
+.proset-empty-dot {
+    width: 100px;
+    height: 0px;
 }
