--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@
     height: 40px;
     width: 100px;
     font-family:'Computer Modern',sans-serif;
+    font-size: 24px;
 
     transition: all .2s ease-in-out;
 }
