touch-action manipulation (remove double-tap zoom)

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     src: url('fonts/cmunrm.ttf');
 }
 
+body {
+    touch-action: manipulation;
+}
+
 .proset-title-line {
     display: flex;
     flex-direction: column;
