--- a/css/style.css
+++ b/css/style.css
@@ -113,10 +113,13 @@ body {
     border-radius: 10px;
     border: 2px solid;
     background-color: white;
+    color: black;
     height: 40px;
     width: 100px;
     font-family:'Computer Modern',sans-serif;
     font-size: 24px;
+    display: flex;
+    justify-content: center;
 
     transition: all .2s ease-in-out;
 }
