support dark theme

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,22 +5,11 @@
     src: url("fonts/cmunrm.ttf");
 }
 
-:root {
-    --one-unit: min(calc(100vw / 400), calc(100vh / 750), 1px);
-    --two-units: calc(2 * var(--one-unit));
-    --ten-units: calc(10 * var(--one-unit));
-    --fifteen-units: calc(15 * var(--one-unit));
-    --twenty-units: calc(20 * var(--one-unit));
-    --twenty-four-units: calc(24 * var(--one-unit));
-    --twenty-five-units: calc(25 * var(--one-unit));
-    --forty-units: calc(40 * var(--one-unit));
-    --sixty-units: calc(60 * var(--one-unit));
-    --one-hundred-units: calc(100 * var(--one-unit));
-    --one-hundred-fifty-units: calc(150 * var(--one-unit));
-}
-
 body {
+    overflow: hidden;
     touch-action: none;
+    background-color: var(--background-primary);
+    color: var(--foreground-primary);
 }
 
 .proset-title-line {
@@ -57,7 +46,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: var(--fifteen-units);
-    border: var(--two-units) solid;
+    border: var(--two-units) solid var(--foreground-primary);
     border-radius: var(--ten-units);
     padding: var(--twenty-units);
     margin-bottom: var(--twenty-units);
@@ -72,8 +61,8 @@ body {
 
 .proset-card {
     border-radius: var(--ten-units);
-    border: var(--two-units) solid black;
-    background-color: white;
+    border: var(--two-units) solid var(--foreground-primary);
+    background-color: var(--background-primary);
     height: var(--one-hundred-fifty-units);
     width: var(--one-hundred-units);
 
@@ -87,8 +76,8 @@ body {
 }
 
 .proset-card.selected {
-    background-color: black;
-    border: var(--two-units) solid gray;
+    background-color: var(--background-selected-primary);
+    border: var(--two-units) solid var(--foreground-selected-primary);
 }
 
 .proset-dots {
@@ -104,13 +93,13 @@ body {
 
 .proset-dot {
     border-radius: 50%;
-    border: var(--one-unit) solid;
+    border: var(--one-unit) solid var(--foreground-secondary);
     height: var(--twenty-five-units);
     width: var(--twenty-five-units);
     margin: var(--ten-units);
 }
 .proset-card.selected .proset-dots .proset-dot {
-    border: var(--one-unit) solid white;
+    border: var(--one-unit) solid var(--foreground-selected-secondary);
 }
 
 .proset-empty-dot {
@@ -128,29 +117,38 @@ body {
 .proset-button {
     border-radius: var(--ten-units);
     border: var(--two-units) solid;
-    background-color: white;
-    color: black;
+    background-color: var(--background-primary);
+    color: var(--foreground-primary);
     height: var(--forty-units);
     width: var(--one-hundred-units);
     font-family: "Computer Modern", sans-serif;
     font-size: var(--twenty-four-units);
+
     display: flex;
     justify-content: center;
+    align-items: center;
 
     transition: all 0.2s ease-in-out;
 }
 
-@media (hover: hover) {
+.proset-button span {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+}
+
+@media all and (hover: hover) {
     .proset-button:hover {
-        background-color: lightgray;
+        background-color: var(--background-secondary);
+        border-color: var(--foreground-selected-secondary);
         transition: all 0.1s ease-in-out;
     }
 }
 
 .proset-button.clicked {
-    background-color: black;
-    border-color: gray;
-    color: white;
+    background-color: var(--background-selected-primary);
+    border-color: var(--foreground-selected-primary);
+    color: var(--foreground-selected-primary);
 }
 
 @media all and (min-aspect-ratio: 1/1) {
