--- a/css/vars.css
+++ b/css/vars.css
@@ -1,6 +1,7 @@
 :root {
     --one-unit: min(calc(100vw / 400), calc(100vh / 750), 1px);
     --two-units: calc(2 * var(--one-unit));
+    --five-units: calc(5 * var(--one-unit));
     --ten-units: calc(10 * var(--one-unit));
     --fifteen-units: calc(15 * var(--one-unit));
     --twenty-units: calc(20 * var(--one-unit));
@@ -35,12 +36,12 @@
         --foreground-secondary: black;
         --foreground-selected-primary: #333333;
         --foreground-selected-secondary: black;
-    
+
         --background-primary: black;
         --background-secondary: #333333;
         --background-selected-primary: #999999;
         --background-selected-secondary: white;
-    
+
         --color1: red;
         --color2: orange;
         --color3: yellow;
