--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,7 @@
     src: url("fonts/cmunrm.ttf");
 }
 
-body {
-    overflow: hidden;
+html, body {
     touch-action: none;
     background-color: var(--background-primary);
     color: var(--foreground-primary);
@@ -187,6 +186,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: auto;
+    touch-action: none;
 
     background-color: black;
     background-color: rgba(0, 0, 0, 0.5);
