--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,12 @@
     src: url("fonts/cmunrm.ttf");
 }
 
-html, body {
+html,
+body {
     touch-action: none;
     background-color: var(--background-primary);
     color: var(--foreground-primary);
-    font-family: 'Computer Modern';
+    font-family: "Computer Modern";
 }
 
 .proset-title-line {
@@ -101,7 +102,7 @@ html, body {
 
 .proset-card.example {
     transform: scale(0.65);
-    margin: calc(-1.45*var(--fifteen-units)) calc(-1.45*var(--ten-units));
+    margin: calc(-1.45 * var(--fifteen-units)) calc(-1.45 * var(--ten-units));
 }
 
 .proset-dots {
@@ -190,7 +191,7 @@ html, body {
 
     background-color: black;
     background-color: rgba(0, 0, 0, 0.5);
-    
+
     z-index: 1;
     transition: all 0.2s ease-in-out;
 }
